@@ -1,5 +1,5 @@
 
-R version 2.13.0 Under development (unstable) (2011-03-04 r54667)
+R Under development (unstable) (2011-08-13 r56727)
 Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
@@ -688,20 +688,17 @@ climb   1 320.99
 > ## failed in R < 2.10.0
 > 
 > 
-> if(require("Matrix")) {
+> if(suppressMessages(require("Matrix"))) {
 +   print(cS. <- contr.SAS(5, sparse = TRUE))
 +   stopifnot(all(contr.SAS(5) == cS.),
 + 	    all(contr.helmert(5, sparse = TRUE) == contr.helmert(5)))
++ 
++   x1 <- x2 <- c('a','b','a','b','c')
++   x3 <- x2; x3[4:5] <- x2[5:4]
++   print(xtabs(~ x1 + x2, sparse= TRUE, exclude = 'c'))
++   print(xtabs(~ x1 + x3, sparse= TRUE, exclude = 'c'))
++   ## failed in R <= 2.13.1
 + }
-Loading required package: Matrix
-Loading required package: lattice
-
-Attaching package: 'Matrix'
-
-The following object(s) are masked from 'package:base':
-
-    det
-
 5 x 4 sparse Matrix of class "dgCMatrix"
   1 2 3 4
 1 1 . . .
@@ -709,6 +706,14 @@ The following object(s) are masked from 'package:base':
 3 . . 1 .
 4 . . . 1
 5 . . . .
+2 x 2 sparse Matrix of class "dgCMatrix"
+  a b
+a 2 .
+b . 2
+2 x 2 sparse Matrix of class "dgCMatrix"
+  a b
+a 2 .
+b . 1
 > 
 > ## regression tests for dimnames (broken on 2009-07-31)
 > contr.sum(4)
